syntax = "proto3";

option csharp_namespace = "Ozon.MerchandiseService.Grpc";

package MerchandiseService;

service MerchandiseGrpcApi{
  
  rpc RequestMerch(RequestMerchRequest) returns (BaseResponse);
  
  rpc GetInfoIssuanceMerch(Int32BaseRequest) returns (InfoIssuanceMerchResponse);
  
}

message InfoIssuanceMerchResponse
{
  int32 id = 1;
  string full_name = 2;
  string merch_name = 3;
  int32 quantity = 4;
}

message RequestMerchRequest
{
  string full_name = 1;
  string merch_name = 2;
  int32 quantity = 3;
}

message Int32BaseRequest
{
  int32 id = 1;
}

message BaseResponse
{
  int32 status_code = 1;
  string message = 2;
}